Reverted for images fix
Images folder messed up for some reason, reverting to when it worked

--- a/Archive/Version 2/styles.css
+++ b/Archive/Version 2/styles.css
@@ -453,7 +453,6 @@ p {
 .overlay-card::before {
   width: 100%;
   height: 100%;
-  border-radius: 5px;
   top: 0;
   left: 0;
   content: "";
@@ -472,7 +471,6 @@ p {
 .overlay-card img {
   width: 100%;
   height: 100%;
-  border-radius: 5px;
   top: 0;
   left: 0;
   position: absolute;
